--- a/src/info.plist
+++ b/src/info.plist
@@ -436,6 +436,8 @@
 				<false/>
 			</dict>
 		</array>
+		<key>9A202C58-854E-4E02-A640-BF13A9E1B823</key>
+		<array/>
 		<key>9A384EEE-AA82-4FC5-8B13-1F7319613854</key>
 		<array>
 			<dict>
@@ -450,7 +452,18 @@
 			</dict>
 		</array>
 		<key>A950947F-8EA7-4749-AF55-2C7F9D6E695E</key>
-		<array/>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>9A202C58-854E-4E02-A640-BF13A9E1B823</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>AEE6452E-9186-4609-8AD4-D74F469F1A79</key>
 		<array>
 			<dict>
@@ -1404,6 +1417,46 @@ python3 zh.py citations "$id" "$1"
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>68</integer>
+				<key>script</key>
+				<string>function copyLink(uti_html, uti_plain, uti_rtf) {
+
+    let pboard = $.NSPasteboard.generalPasteboard;
+    pboard.clearContents;
+    pboard.setStringForType(uti_rtf, 'public.rtf');
+    pboard.setStringForType(uti_html, 'public.html');
+    pboard.setStringForType(uti_plain, 'public.utf8-plain-text');
+}
+
+function run(argv) {
+ObjC.import('AppKit');
+ObjC.import('stdlib');
+var UTI_HTML = $.getenv('UTI_HTML');
+var UTI_PLAIN = $.getenv('UTI_PLAIN');
+var UTI_RTF = $.getenv('UTI_RTF');
+
+  return copyLink(UTI_HTML, UTI_PLAIN, UTI_RTF)
+}</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>7</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>9A202C58-854E-4E02-A640-BF13A9E1B823</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>triggerid</key>
 				<string>citations</string>
 			</dict>
@@ -2312,7 +2365,7 @@ Edit the `ZOTERO_DIR` variable to point to Zotero 5's data directory if you aren
 			<key>colorindex</key>
 			<integer>4</integer>
 			<key>xpos</key>
-			<integer>1330</integer>
+			<integer>1335</integer>
 			<key>ypos</key>
 			<integer>735</integer>
 		</dict>
@@ -2466,6 +2519,15 @@ Edit the `ZOTERO_DIR` variable to point to Zotero 5's data directory if you aren
 			<key>ypos</key>
 			<integer>210</integer>
 		</dict>
+		<key>9A202C58-854E-4E02-A640-BF13A9E1B823</key>
+		<dict>
+			<key>note</key>
+			<string>Copy citation to pasteboard</string>
+			<key>xpos</key>
+			<integer>1630</integer>
+			<key>ypos</key>
+			<integer>705</integer>
+		</dict>
 		<key>9A384EEE-AA82-4FC5-8B13-1F7319613854</key>
 		<dict>
 			<key>note</key>
@@ -2480,7 +2542,7 @@ Edit the `ZOTERO_DIR` variable to point to Zotero 5's data directory if you aren
 			<key>colorindex</key>
 			<integer>4</integer>
 			<key>note</key>
-			<string>Copy citation to pasteboard</string>
+			<string>Generate citation</string>
 			<key>xpos</key>
 			<integer>1450</integer>
 			<key>ypos</key>
@@ -2662,7 +2724,7 @@ Edit the `ZOTERO_DIR` variable to point to Zotero 5's data directory if you aren
 		<key>ATTACHMENTS_DIR</key>
 		<string></string>
 		<key>CITE_STYLE</key>
-		<string>http://www.zotero.org/styles/modern-humanities-research-association</string>
+		<string>http://www.zotero.org/styles/chicago-author-date</string>
 		<key>COPY_CITEKEY_MOD</key>
 		<string></string>
 		<key>LOCALE</key>
@@ -2672,14 +2734,12 @@ Edit the `ZOTERO_DIR` variable to point to Zotero 5's data directory if you aren
 	</dict>
 	<key>variablesdontexport</key>
 	<array>
-		<string>LOCALE</string>
 		<string>ATTACHMENTS_DIR</string>
-		<string>ZOTERO_DIR</string>
 		<string>COPY_CITEKEY_MOD</string>
-		<string>CITE_STYLE</string>
+		<string>ZOTERO_DIR</string>
 	</array>
 	<key>version</key>
-	<string>1.99.3</string>
+	<string>1.99.4</string>
 	<key>webaddress</key>
 	<string>https://github.com/deanishe/zothero</string>
 </dict>
